@@ -235,4 +235,4 @@ def main(argv):
 
 
 if __name__ == '__main__':
-    main()
+    main(sys.argv)
