@@ -5,6 +5,10 @@ Release 0.7 (in development)
 Release 0.6.2 (in development)
 ==============================
 
+* Fix autodoc crash for objects without a ``__name__``.
+
+* Fix intersphinx for installations without urllib2.HTTPSHandler.
+
 * #134: Fix pending_xref leftover nodes when using the todolist
   directive from the todo extension.
 
